feat: gorouter implemen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,5 @@
 {
-    "editProfile": "Edit Profile!",
+    "editProfile": "Edit Profile",
     "@editProfile": {
       "description": "The text for 'Edit Profile'"
     },
